change the photo of heading

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </nav>
         <!declearation>
             
-            <div class="jumbotron jumbotron-fluid"; style= "background-image: url('AliahUniversity.jpg');background-repeat: no-repeat;
+            <div class="jumbotron jumbotron-fluid"; style= "background-image: url('Edited.jpg');background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;background-size: 100% 100%;height: 450px"; id="particles-js">
            
