--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <img src="SeminerHall.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="Keyboard.jpg" class="d-block w-100" alt="...">
+            <img src="circuit.jpg" class="d-block w-100" alt="...">
           </div>
           
           
