--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>AU CS-DAY 2020</title>
-    <link rel="icon" type="image/ico" href="AliahUniversity.jpg" />
+    <link rel="icon" type="image/ico" href="Edited.jpg" />
 </head>
 
 <body style= "background-color:lightblue;">
